fixed carousel media issues on mobile

--- a/src/components/TopCarousel/TopCarousel.scss
+++ b/src/components/TopCarousel/TopCarousel.scss
@@ -30,7 +30,13 @@
 
 				h1 {
 					margin-bottom: 30px;
+
+					@media (max-width: $tablet_width) {
+						font-size: 2.4em;
+					}
 				}
+
+				
 
 				@media (max-width: $tablet_width) {
 					width: 80%;
@@ -44,6 +50,14 @@
 		$n: 6; // number of images
 
 		$t: ($a + $b) * $n; // total animation duration
+
+		position: relative;
+        width: 100%;
+        // min-width: 900px;
+        height: 90vh;
+        overflow-y: hidden;
+		overflow-x: hidden;
+
 		.carousel-image {
 			position: absolute;
 			opacity: 1;
